discussion/kv_engine/175753/175753_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Successful RangeScan changes state to Completed

Initial motivator for this change was to improve the INFO logging
of a RangeScan, capturing when one is created and when it finally
goes away, with the desire to log the state and duration.

An extra state is added "Completed" that allows the differentiation
of scans that were cancelled, enabling ~RangeScan to log the
correct state and the runtime of the scan.

Some clean-up of the state transitions included as a lot of
reviewing of the state code occurs, primarily removing the
needless switch from Continuing->Idle for a successful scan.
Now that jumps straight from Continuing->Completed.

Change-Id: I21629765f48e9ff7cd69697e095a1155c104ff51

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-06 15:18:22.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-06 15:18:45.000000000
Message: 
Patch Set 2: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/301460/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-06-06 15:33:37.000000000
Message: 
Removed Well-Formed-1 by <GERRIT_ACCOUNT_1004139>

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-06 16:08:06.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46622/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
unknown file: error: C++ exception with description "EOF: connection reset" thrown in the test body.
[  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (9 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46622/ )

Timeout of a CTest test 426/426 Test #260: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17938/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:236:28: error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
cb::engine_errc RangeScan::hasPrivilege(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
                                 const EventuallyPersistentEngine& engine);
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:222:37: error: out-of-line definition of "hasPrivilege" does not match any declaration in "VB::RangeScanOwner" [clang-diagnostic-error]
cb::engine_errc VB::RangeScanOwner::hasPrivilege(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:164:19: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
            const EventuallyPersistentEngine& engine) const;
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17938/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:236:28:
error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17938/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39185/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39185/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7597/ : FAILURE

Compile error at [2022-06-06T15:27:12.705Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19776/ : FAILURE

Compile error at [2022-06-06T15:36:50.253Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19776/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20123/ : FAILURE

Compile error at [2022-06-06T15:41:13.965Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20123/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20778/ : FAILURE

Compile error at [2022-06-06T15:42:11.436Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7701/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-06-06T15:49:46.054Z] unknown file: Failure
[2022-06-06T15:49:46.054Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-06-06T15:49:46.054Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7701/ )

Timeout of a CTest test [2022-06-06T15:49:26.454Z] 237/447 Test #267: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7701/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28169/ : FAILURE

Compile error at [2022-06-06T15:50:36.437Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28169/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18968/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-06-06T15:31:43.389Z] unknown file: Failure
[2022-06-06T15:31:43.389Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-06-06T15:31:43.389Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (16 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18968/ )

Timeout of a CTest test [2022-06-06T15:36:42.481Z]  25/446 Test #267: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18968/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16991/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
